UE04/src/2/MiniCpp.output
State 70 conflicts: 2 shift/reduce
State 101 conflicts: 2 shift/reduce
State 102 conflicts: 2 shift/reduce
State 114 conflicts: 1 shift/reduce
State 159 conflicts: 2 shift/reduce
State 205 conflicts: 1 shift/reduce


Grammar

    0 $accept: MiniCpp $end

    1 MiniCpp: MiniCppList

    2 MiniCppList: /* empty */
    3            | MiniCppList ConstDef
    4            | MiniCppList VarDef
    5            | MiniCppList FuncDecl
    6            | MiniCppList FuncDef
    7            | MiniCppList ';'

    8 ConstDef: CONST Type IDENT Init IdentList ';'

    9 IdentList: /* empty */
   10          | IdentList ',' IDENT Init

   11 Init: '=' FALSE
   12     | '=' TRUE
   13     | '=' NULLPTR
   14     | '=' '+' NUMBER
   15     | '=' '-' NUMBER

   16 VarDef: Type VarDefIdent VarDefIdentList ';'

   17 VarDefIdentList: /* empty */
   18                | VarDefIdentList ',' VarDefIdent

   19 VarDefIdent: '*' IDENT Init
   20            | IDENT
   21            | '*' IDENT
   22            | IDENT Init

   23 FuncDecl: FuncHead ';'

   24 FuncDef: FuncHead Block

   25 FuncHead: Type '*' IDENT '(' ')'
   26         | Type IDENT '(' ')'
   27         | Type IDENT '(' FormParList ')'
   28         | Type '*' IDENT '(' FormParList ')'

   29 FormParList: VOID
   30            | TypeIdent TypeIdentList

   31 TypeIdentList: /* empty */
   32              | TypeIdentList ',' TypeIdent

   33 TypeIdent: Type '*' IDENT '[' ']'
   34          | Type '*' IDENT
   35          | Type IDENT '[' ']'

   36 Type: VOID
   37     | BOOL
   38     | INT

   39 Block: '{' BlockList '}'

   40 BlockList: /* empty */
   41          | BlockList ConstDef
   42          | BlockList VarDef
   43          | BlockList Stat

   44 Stat: EmptyStat
   45     | BlockStat
   46     | ExprStat
   47     | IfStat
   48     | WhileStat
   49     | BreakStat
   50     | InputStat
   51     | OutputStat
   52     | DeleteStat
   53     | ReturnStat

   54 EmptyStat: ';'

   55 BlockStat: Block

   56 ExprStat: Expr

   57 IfStat: IF '(' Expr ')' Stat StatList

   58 StatList: /* empty */
   59         | StatList ELSE Stat

   60 WhileStat: WHILE '(' Expr ')'

   61 BreakStat: BREAK ';'

   62 InputStat: CIN OPSHIFTRIGHT IDENT ';'

   63 OutputStat: COUT CoutRight CoutRightList ';'

   64 CoutRightList: /* empty */
   65              | CoutRightList CoutRight

   66 CoutRight: OPSHIFTLEFT Expr
   67          | OPSHIFTLEFT STRING
   68          | OPSHIFTLEFT ENDL

   69 DeleteStat: DELETE '[' ']' IDENT ';'

   70 ReturnStat: RETURN ';'
   71           | RETURN Expr ';'

   72 Expr: OrExpr OrExprList

   73 OrExprList: /* empty */
   74           | OrExprList '=' OrExpr
   75           | OrExprList ADDASSIGN OrExpr
   76           | OrExprList SUBTRACTASSIGN OrExpr
   77           | OrExprList MULTIPLYASSIGN OrExpr
   78           | OrExprList DIVIDEASSIGN OrExpr
   79           | OrExprList MODULOASSIGN OrExpr

   80 OrExpr: AndExpr AndExprList

   81 AndExprList: /* empty */
   82            | AndExprList LOGICALOR AndExpr

   83 AndExpr: RelExpr RelExprList

   84 RelExprList: /* empty */
   85            | RelExprList LOGICALAND RelExpr

   86 RelExpr: SimpleExpr SimpleExprList

   87 SimpleExprList: /* empty */
   88               | SimpleExprList OPEQUAL SimpleExpr
   89               | SimpleExprList OPNOTEQUAL SimpleExpr
   90               | SimpleExprList OPLESS SimpleExpr
   91               | SimpleExprList OPLESSEQUAL SimpleExpr
   92               | SimpleExprList OPGREATER SimpleExpr
   93               | SimpleExprList OPGREATEREQUAL SimpleExpr

   94 SimpleExpr: '+' TermList
   95           | '-' TermList
   96           | TermList

   97 TermList: Term
   98         | TermList '+' Term
   99         | TermList '-' Term

  100 Term: NotFact NotFactList

  101 NotFactList: /* empty */
  102            | NotFactList '*' NotFact
  103            | NotFactList '/' NotFact
  104            | NotFactList '%' NotFact

  105 NotFact: Fact
  106        | '!' Fact

  107 Fact: FALSE
  108     | TRUE
  109     | NULLPTR
  110     | NUMBER
  111     | DudeWtf
  112     | NEW Type '[' Expr ']'
  113     | '(' Expr ')'

  114 DudeWtf: OptDecrOrIncr IDENT WeirdIdentShit OptDecrOrIncr

  115 WeirdIdentShit: /* empty */
  116               | '[' Expr ']'
  117               | '(' ActParList ')'
  118               | '(' ')'

  119 OptDecrOrIncr: /* empty */
  120              | OPINCREMENT
  121              | OPDECREMENT

  122 ActParList: Expr ExprList

  123 ExprList: /* empty */
  124         | ExprList ',' Expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 106
'%' (37) 104
'(' (40) 25 26 27 28 57 60 113 117 118
')' (41) 25 26 27 28 57 60 113 117 118
'*' (42) 19 21 25 28 33 34 102
'+' (43) 14 94 98
',' (44) 10 18 32 124
'-' (45) 15 95 99
'/' (47) 103
';' (59) 7 8 16 23 54 61 62 63 69 70 71
'=' (61) 11 12 13 14 15 74
'[' (91) 33 35 69 112 116
']' (93) 33 35 69 112 116
'{' (123) 39
'}' (125) 39
error (256)
NUMBER (258) 14 15 110
STRING (259) 67
IDENT (260) 8 10 19 20 21 22 25 26 27 28 33 34 35 62 69 114
CONST (261) 8
FALSE (262) 11 107
TRUE (263) 12 108
NULLPTR (264) 13 109
VOID (265) 29 36
BOOL (266) 37
INT (267) 38
IF (268) 57
ELSE (269) 59
WHILE (270) 60
BREAK (271) 61
CIN (272) 62
COUT (273) 63
ENDL (274) 68
DELETE (275) 69
RETURN (276) 70 71
NEW (277) 112
LOGICALAND (278) 85
LOGICALOR (279) 82
ADDASSIGN (280) 75
SUBTRACTASSIGN (281) 76
MULTIPLYASSIGN (282) 77
DIVIDEASSIGN (283) 78
MODULOASSIGN (284) 79
OPINCREMENT (285) 120
OPDECREMENT (286) 121
OPSHIFTLEFT (287) 66 67 68
OPSHIFTRIGHT (288) 62
OPEQUAL (289) 88
OPNOTEQUAL (290) 89
OPLESS (291) 90
OPLESSEQUAL (292) 91
OPGREATER (293) 92
OPGREATEREQUAL (294) 93


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
MiniCpp (56)
    on left: 1, on right: 0
MiniCppList (57)
    on left: 2 3 4 5 6 7, on right: 1 3 4 5 6 7
ConstDef (58)
    on left: 8, on right: 3 41
IdentList (59)
    on left: 9 10, on right: 8 10
Init (60)
    on left: 11 12 13 14 15, on right: 8 10 19 22
VarDef (61)
    on left: 16, on right: 4 42
VarDefIdentList (62)
    on left: 17 18, on right: 16 18
VarDefIdent (63)
    on left: 19 20 21 22, on right: 16 18
FuncDecl (64)
    on left: 23, on right: 5
FuncDef (65)
    on left: 24, on right: 6
FuncHead (66)
    on left: 25 26 27 28, on right: 23 24
FormParList (67)
    on left: 29 30, on right: 27 28
TypeIdentList (68)
    on left: 31 32, on right: 30 32
TypeIdent (69)
    on left: 33 34 35, on right: 30 32
Type (70)
    on left: 36 37 38, on right: 8 16 25 26 27 28 33 34 35 112
Block (71)
    on left: 39, on right: 24 55
BlockList (72)
    on left: 40 41 42 43, on right: 39 41 42 43
Stat (73)
    on left: 44 45 46 47 48 49 50 51 52 53, on right: 43 57 59
EmptyStat (74)
    on left: 54, on right: 44
BlockStat (75)
    on left: 55, on right: 45
ExprStat (76)
    on left: 56, on right: 46
IfStat (77)
    on left: 57, on right: 47
StatList (78)
    on left: 58 59, on right: 57 59
WhileStat (79)
    on left: 60, on right: 48
BreakStat (80)
    on left: 61, on right: 49
InputStat (81)
    on left: 62, on right: 50
OutputStat (82)
    on left: 63, on right: 51
CoutRightList (83)
    on left: 64 65, on right: 63 65
CoutRight (84)
    on left: 66 67 68, on right: 63 65
DeleteStat (85)
    on left: 69, on right: 52
ReturnStat (86)
    on left: 70 71, on right: 53
Expr (87)
    on left: 72, on right: 56 57 60 66 71 112 113 116 122 124
OrExprList (88)
    on left: 73 74 75 76 77 78 79, on right: 72 74 75 76 77 78 79
OrExpr (89)
    on left: 80, on right: 72 74 75 76 77 78 79
AndExprList (90)
    on left: 81 82, on right: 80 82
AndExpr (91)
    on left: 83, on right: 80 82
RelExprList (92)
    on left: 84 85, on right: 83 85
RelExpr (93)
    on left: 86, on right: 83 85
SimpleExprList (94)
    on left: 87 88 89 90 91 92 93, on right: 86 88 89 90 91 92 93
SimpleExpr (95)
    on left: 94 95 96, on right: 86 88 89 90 91 92 93
TermList (96)
    on left: 97 98 99, on right: 94 95 96 98 99
Term (97)
    on left: 100, on right: 97 98 99
NotFactList (98)
    on left: 101 102 103 104, on right: 100 102 103 104
NotFact (99)
    on left: 105 106, on right: 100 102 103 104
Fact (100)
    on left: 107 108 109 110 111 112 113, on right: 105 106
DudeWtf (101)
    on left: 114, on right: 111
WeirdIdentShit (102)
    on left: 115 116 117 118, on right: 114
OptDecrOrIncr (103)
    on left: 119 120 121, on right: 114
ActParList (104)
    on left: 122, on right: 117
ExprList (105)
    on left: 123 124, on right: 122 124


State 0

    0 $accept: . MiniCpp $end

    $default  reduce using rule 2 (MiniCppList)

    MiniCpp      go to state 1
    MiniCppList  go to state 2


State 1

    0 $accept: MiniCpp . $end

    $end  shift, and go to state 3


State 2

    1 MiniCpp: MiniCppList .
    3 MiniCppList: MiniCppList . ConstDef
    4            | MiniCppList . VarDef
    5            | MiniCppList . FuncDecl
    6            | MiniCppList . FuncDef
    7            | MiniCppList . ';'

    CONST  shift, and go to state 4
    VOID   shift, and go to state 5
    BOOL   shift, and go to state 6
    INT    shift, and go to state 7
    ';'    shift, and go to state 8

    $default  reduce using rule 1 (MiniCpp)

    ConstDef  go to state 9
    VarDef    go to state 10
    FuncDecl  go to state 11
    FuncDef   go to state 12
    FuncHead  go to state 13
    Type      go to state 14


State 3

    0 $accept: MiniCpp $end .

    $default  accept


State 4

    8 ConstDef: CONST . Type IDENT Init IdentList ';'

    VOID  shift, and go to state 5
    BOOL  shift, and go to state 6
    INT   shift, and go to state 7

    Type  go to state 15


State 5

   36 Type: VOID .

    $default  reduce using rule 36 (Type)


State 6

   37 Type: BOOL .

    $default  reduce using rule 37 (Type)


State 7

   38 Type: INT .

    $default  reduce using rule 38 (Type)


State 8

    7 MiniCppList: MiniCppList ';' .

    $default  reduce using rule 7 (MiniCppList)


State 9

    3 MiniCppList: MiniCppList ConstDef .

    $default  reduce using rule 3 (MiniCppList)


State 10

    4 MiniCppList: MiniCppList VarDef .

    $default  reduce using rule 4 (MiniCppList)


State 11

    5 MiniCppList: MiniCppList FuncDecl .

    $default  reduce using rule 5 (MiniCppList)


State 12

    6 MiniCppList: MiniCppList FuncDef .

    $default  reduce using rule 6 (MiniCppList)


State 13

   23 FuncDecl: FuncHead . ';'
   24 FuncDef: FuncHead . Block

    ';'  shift, and go to state 16
    '{'  shift, and go to state 17

    Block  go to state 18


State 14

   16 VarDef: Type . VarDefIdent VarDefIdentList ';'
   25 FuncHead: Type . '*' IDENT '(' ')'
   26         | Type . IDENT '(' ')'
   27         | Type . IDENT '(' FormParList ')'
   28         | Type . '*' IDENT '(' FormParList ')'

    IDENT  shift, and go to state 19
    '*'    shift, and go to state 20

    VarDefIdent  go to state 21


State 15

    8 ConstDef: CONST Type . IDENT Init IdentList ';'

    IDENT  shift, and go to state 22


State 16

   23 FuncDecl: FuncHead ';' .

    $default  reduce using rule 23 (FuncDecl)


State 17

   39 Block: '{' . BlockList '}'

    $default  reduce using rule 40 (BlockList)

    BlockList  go to state 23


State 18

   24 FuncDef: FuncHead Block .

    $default  reduce using rule 24 (FuncDef)


State 19

   20 VarDefIdent: IDENT .
   22            | IDENT . Init
   26 FuncHead: Type IDENT . '(' ')'
   27         | Type IDENT . '(' FormParList ')'

    '='  shift, and go to state 24
    '('  shift, and go to state 25

    $default  reduce using rule 20 (VarDefIdent)

    Init  go to state 26


State 20

   19 VarDefIdent: '*' . IDENT Init
   21            | '*' . IDENT
   25 FuncHead: Type '*' . IDENT '(' ')'
   28         | Type '*' . IDENT '(' FormParList ')'

    IDENT  shift, and go to state 27


State 21

   16 VarDef: Type VarDefIdent . VarDefIdentList ';'

    $default  reduce using rule 17 (VarDefIdentList)

    VarDefIdentList  go to state 28


State 22

    8 ConstDef: CONST Type IDENT . Init IdentList ';'

    '='  shift, and go to state 24

    Init  go to state 29


State 23

   39 Block: '{' BlockList . '}'
   41 BlockList: BlockList . ConstDef
   42          | BlockList . VarDef
   43          | BlockList . Stat

    NUMBER       shift, and go to state 30
    CONST        shift, and go to state 4
    FALSE        shift, and go to state 31
    TRUE         shift, and go to state 32
    NULLPTR      shift, and go to state 33
    VOID         shift, and go to state 5
    BOOL         shift, and go to state 6
    INT          shift, and go to state 7
    IF           shift, and go to state 34
    WHILE        shift, and go to state 35
    BREAK        shift, and go to state 36
    CIN          shift, and go to state 37
    COUT         shift, and go to state 38
    DELETE       shift, and go to state 39
    RETURN       shift, and go to state 40
    NEW          shift, and go to state 41
    OPINCREMENT  shift, and go to state 42
    OPDECREMENT  shift, and go to state 43
    ';'          shift, and go to state 44
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '('          shift, and go to state 47
    '{'          shift, and go to state 17
    '}'          shift, and go to state 48
    '!'          shift, and go to state 49

    $default  reduce using rule 119 (OptDecrOrIncr)

    ConstDef       go to state 50
    VarDef         go to state 51
    Type           go to state 52
    Block          go to state 53
    Stat           go to state 54
    EmptyStat      go to state 55
    BlockStat      go to state 56
    ExprStat       go to state 57
    IfStat         go to state 58
    WhileStat      go to state 59
    BreakStat      go to state 60
    InputStat      go to state 61
    OutputStat     go to state 62
    DeleteStat     go to state 63
    ReturnStat     go to state 64
    Expr           go to state 65
    OrExpr         go to state 66
    AndExpr        go to state 67
    RelExpr        go to state 68
    SimpleExpr     go to state 69
    TermList       go to state 70
    Term           go to state 71
    NotFact        go to state 72
    Fact           go to state 73
    DudeWtf        go to state 74
    OptDecrOrIncr  go to state 75


State 24

   11 Init: '=' . FALSE
   12     | '=' . TRUE
   13     | '=' . NULLPTR
   14     | '=' . '+' NUMBER
   15     | '=' . '-' NUMBER

    FALSE    shift, and go to state 76
    TRUE     shift, and go to state 77
    NULLPTR  shift, and go to state 78
    '+'      shift, and go to state 79
    '-'      shift, and go to state 80


State 25

   26 FuncHead: Type IDENT '(' . ')'
   27         | Type IDENT '(' . FormParList ')'

    VOID  shift, and go to state 81
    BOOL  shift, and go to state 6
    INT   shift, and go to state 7
    ')'   shift, and go to state 82

    FormParList  go to state 83
    TypeIdent    go to state 84
    Type         go to state 85


State 26

   22 VarDefIdent: IDENT Init .

    $default  reduce using rule 22 (VarDefIdent)


State 27

   19 VarDefIdent: '*' IDENT . Init
   21            | '*' IDENT .
   25 FuncHead: Type '*' IDENT . '(' ')'
   28         | Type '*' IDENT . '(' FormParList ')'

    '='  shift, and go to state 24
    '('  shift, and go to state 86

    $default  reduce using rule 21 (VarDefIdent)

    Init  go to state 87


State 28

   16 VarDef: Type VarDefIdent VarDefIdentList . ';'
   18 VarDefIdentList: VarDefIdentList . ',' VarDefIdent

    ';'  shift, and go to state 88
    ','  shift, and go to state 89


State 29

    8 ConstDef: CONST Type IDENT Init . IdentList ';'

    $default  reduce using rule 9 (IdentList)

    IdentList  go to state 90


State 30

  110 Fact: NUMBER .

    $default  reduce using rule 110 (Fact)


State 31

  107 Fact: FALSE .

    $default  reduce using rule 107 (Fact)


State 32

  108 Fact: TRUE .

    $default  reduce using rule 108 (Fact)


State 33

  109 Fact: NULLPTR .

    $default  reduce using rule 109 (Fact)


State 34

   57 IfStat: IF . '(' Expr ')' Stat StatList

    '('  shift, and go to state 91


State 35

   60 WhileStat: WHILE . '(' Expr ')'

    '('  shift, and go to state 92


State 36

   61 BreakStat: BREAK . ';'

    ';'  shift, and go to state 93


State 37

   62 InputStat: CIN . OPSHIFTRIGHT IDENT ';'

    OPSHIFTRIGHT  shift, and go to state 94


State 38

   63 OutputStat: COUT . CoutRight CoutRightList ';'

    OPSHIFTLEFT  shift, and go to state 95

    CoutRight  go to state 96


State 39

   69 DeleteStat: DELETE . '[' ']' IDENT ';'

    '['  shift, and go to state 97


State 40

   70 ReturnStat: RETURN . ';'
   71           | RETURN . Expr ';'

    NUMBER       shift, and go to state 30
    FALSE        shift, and go to state 31
    TRUE         shift, and go to state 32
    NULLPTR      shift, and go to state 33
    NEW          shift, and go to state 41
    OPINCREMENT  shift, and go to state 42
    OPDECREMENT  shift, and go to state 43
    ';'          shift, and go to state 98
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '('          shift, and go to state 47
    '!'          shift, and go to state 49

    $default  reduce using rule 119 (OptDecrOrIncr)

    Expr           go to state 99
    OrExpr         go to state 66
    AndExpr        go to state 67
    RelExpr        go to state 68
    SimpleExpr     go to state 69
    TermList       go to state 70
    Term           go to state 71
    NotFact        go to state 72
    Fact           go to state 73
    DudeWtf        go to state 74
    OptDecrOrIncr  go to state 75


State 41

  112 Fact: NEW . Type '[' Expr ']'

    VOID  shift, and go to state 5
    BOOL  shift, and go to state 6
    INT   shift, and go to state 7

    Type  go to state 100


State 42

  120 OptDecrOrIncr: OPINCREMENT .

    $default  reduce using rule 120 (OptDecrOrIncr)


State 43

  121 OptDecrOrIncr: OPDECREMENT .

    $default  reduce using rule 121 (OptDecrOrIncr)


State 44

   54 EmptyStat: ';' .

    $default  reduce using rule 54 (EmptyStat)


State 45

   94 SimpleExpr: '+' . TermList

    NUMBER       shift, and go to state 30
    FALSE        shift, and go to state 31
    TRUE         shift, and go to state 32
    NULLPTR      shift, and go to state 33
    NEW          shift, and go to state 41
    OPINCREMENT  shift, and go to state 42
    OPDECREMENT  shift, and go to state 43
    '('          shift, and go to state 47
    '!'          shift, and go to state 49

    $default  reduce using rule 119 (OptDecrOrIncr)

    TermList       go to state 101
    Term           go to state 71
    NotFact        go to state 72
    Fact           go to state 73
    DudeWtf        go to state 74
    OptDecrOrIncr  go to state 75


State 46

   95 SimpleExpr: '-' . TermList

    NUMBER       shift, and go to state 30
    FALSE        shift, and go to state 31
    TRUE         shift, and go to state 32
    NULLPTR      shift, and go to state 33
    NEW          shift, and go to state 41
    OPINCREMENT  shift, and go to state 42
    OPDECREMENT  shift, and go to state 43
    '('          shift, and go to state 47
    '!'          shift, and go to state 49

    $default  reduce using rule 119 (OptDecrOrIncr)

    TermList       go to state 102
    Term           go to state 71
    NotFact        go to state 72
    Fact           go to state 73
    DudeWtf        go to state 74
    OptDecrOrIncr  go to state 75


State 47

  113 Fact: '(' . Expr ')'

    NUMBER       shift, and go to state 30
    FALSE        shift, and go to state 31
    TRUE         shift, and go to state 32
    NULLPTR      shift, and go to state 33
    NEW          shift, and go to state 41
    OPINCREMENT  shift, and go to state 42
    OPDECREMENT  shift, and go to state 43
    '+'          shift, and go to state 45
    '-'          shift, and go to state 46
    '('          shift, and go to state 47
    '!'          shift, and go to state 49

    $default  reduce using rule 119 (OptDecrOrIncr)

    Expr           go to state 103
    OrExpr         go to state 66
    AndExpr        go to state 67
    RelExpr        go to state 68
    SimpleExpr     go to state 69
    TermList       go to state 70
    Term           go to state 71
    NotFact        go to state 72
    Fact           go to state 73
    DudeWtf        go to state 74
    OptDecrOrIncr  go to state 75


State 48

   39 Block: '{' BlockList '}' .

    $default  reduce using rule 39 (Block)


State 49

  106 NotFact: '!' . Fact

    NUMBER       shift, and go to state 30
    FALSE        shift, and go to state 31
    TRUE         shift, and go to state 32
    NULLPTR      shift, and go to state 33
    NEW          shift, and go to state 41
    OPINCREMENT  shift, and go to state 42
    OPDECREMENT  shift, and go to state 43
    '('          shift, and go to state 47

    $default  reduce using rule 119 (OptDecrOrIncr)

    Fact           go to state 104
    DudeWtf        go to state 74
    OptDecrOrIncr  go to state 75


State 50

   41 BlockList: BlockList ConstDef .

    $default  reduce using rule 41 (BlockList)


State 51

   42 BlockList: BlockList VarDef .

    $default  reduce using rule 42 (BlockList)


State 52

   16 VarDef: Type . VarDefIdent VarDefIdentList ';'

    IDENT  shift, and go to state 105
    '*'    shift, and go to state 106

    VarDefIdent  go to state 21


State 53

   55 BlockStat: Block .

    $default  reduce using rule 55 (BlockStat)


State 54

   43 BlockList: BlockList Stat .

    $default  reduce using rule 43 (BlockList)


State 55

   44 Stat: EmptyStat .

    $default  reduce using rule 44 (Stat)


State 56

   45 Stat: BlockStat .

    $default  reduce using rule 45 (Stat)


State 57

   46 Stat: ExprStat .

    $default  reduce using rule 46 (Stat)


State 58

   47 Stat: IfStat .

    $default  reduce using rule 47 (Stat)


State 59

   48 Stat: WhileStat .

    $default  reduce using rule 48 (Stat)


State 60

   49 Stat: BreakStat .

    $default  reduce using rule 49 (Stat)


State 61

   50 Stat: InputStat .

    $default  reduce using rule 50 (Stat)


State 62

   51 Stat: OutputStat .

    $default  reduce using rule 51 (Stat)


State 63

   52 Stat: DeleteStat .

    $default  reduce using rule 52 (Stat)


State 64

   53 Stat: ReturnStat .

    $default  reduce using rule 53 (Stat)


State 65

   56 ExprStat: Expr .

    $default  reduce using rule 56 (ExprStat)


State 66

   72 Expr: OrExpr . OrExprList

    $default  reduce using rule 73 (OrExprList)

    OrExprList  go to state 107


State 67

   80 OrExpr: AndExpr . AndExprList

    $default  reduce using rule 81 (AndExprList)

    AndExprList  go to state 108


State 68

   83 AndExpr: RelExpr . RelExprList

    $default  reduce using rule 84 (RelExprList)

    RelExprList  go to state 109


State 69

   86 RelExpr: SimpleExpr . SimpleExprList

    $default  reduce using rule 87 (SimpleExprList)

    SimpleExprList  go to state 110


State 70

   96 SimpleExpr: TermList .
   98 TermList: TermList . '+' Term
   99         | TermList . '-' Term

    '+'  shift, and go to state 111
    '-'  shift, and go to state 112

    '+'       [reduce using rule 96 (SimpleExpr)]
    '-'       [reduce using rule 96 (SimpleExpr)]
    $default  reduce using rule 96 (SimpleExpr)


State 71

   97 TermList: Term .

    $default  reduce using rule 97 (TermList)


State 72

  100 Term: NotFact . NotFactList

    $default  reduce using rule 101 (NotFactList)

    NotFactList  go to state 113


State 73

  105 NotFact: Fact .

    $default  reduce using rule 105 (NotFact)


State 74

  111 Fact: DudeWtf .

    $default  reduce using rule 111 (Fact)


State 75

  114 DudeWtf: OptDecrOrIncr . IDENT WeirdIdentShit OptDecrOrIncr

    IDENT  shift, and go to state 114


State 76

   11 Init: '=' FALSE .
